syntax = "proto3";
package msg;

option go_package = "/pb";
enum messageType {
    MESSAGE_TYPE_TEXT = 0;
    MESSAGE_TYPE_IMAGE = 1;
    MESSAGE_TYPE_FILE = 2;
    MESSAGE_TYPE_VIDEO = 3;
    MESSAGE_TYPE_AUDIO = 4;
    //    MESSAGE_TYPE_LOCATION = 5;
}

message MsgData {
    string content = 1;
}

message RespData{
    string server_msg_id = 3;
    string client_msg_id = 4;
    string send_time = 5;
}

message SendMessageReq{
    string sender_id = 1;
    string receiver_id = 2;
    string group_id = 4;
    MsgData content =5;
    messageType content_type = 6;
}

message SendMessageResp{
    int32 err_code = 1;
    string err_msg= 2;
    string err_del = 3;
    RespData data = 4;
}
service Msg {
    rpc SendMsg(SendMessageReq) returns (SendMessageResp) {}
}